<resources>
    <string name="app_name">StudyProject</string>
    <string name="recyeleview">RecyeleView</string>
    <string name="material_design">Material Design</string>
    <string name="snackbar">SnackBar</string>
    <string name="text_input_layput">TextInputlayput</string>
    <string name="show_snackbar">Show SnackBar</string>
    <string name="user_name">User Name</string>
    <string name="password">PassWord</string>
    <string name="textinputlayout_login">TextInputLayout Login</string>
    <string name="edittext_login">EditText Login</string>
    <string name="notification">Notification</string>
    <string name="view">View</string>
    <string name="view_dispatch">View的事件分发</string>
    <string name="sliding_one">滑动冲突场景1-外部拦截</string>
    <string name="sliding_two">滑动冲突场景1-内部拦截</string>

</resources>
