<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="demo.study.com.studyproject.MainActivity">

    <Button
        android:id="@+id/start_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recyeleview"/>

    <Button
        android:id="@+id/start_marterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_design"/>

    <Button
        android:id="@+id/bt_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"/>

    <Button
        android:id="@+id/bt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"/>

    <Button
        android:id="@+id/bt_view_dispatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_dispatch"/>
</LinearLayout>
